# qt6-widgets-qml-cmake-hello-world

./: CMakeLists.txt  README.md
cmake/: functions.cmake  platform_apple_aarch64.cmake  platform_linux.cmake  platform_static.cmake
src/: CMakeLists.txt  ctx.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/lib/: config.cpp  config.h  logger.cpp  logger.h  utils.cpp  utils.h
src/qml/: main.qml
